new changes on creating a doctor

--- a/src/index.css
+++ b/src/index.css
@@ -2,29 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-.slim-scrollbar::-webkit-scrollbar{
-	width: 5px !important;
+.slim-scrollbar::-webkit-scrollbar {
+    width: 5px !important;
 }
 
-.container{
-  @apply max-w-[1500px] mx-auto;
+.container {
+    @apply max-w-[1500px] mx-auto;
 }
 
+@layer components {
+    .button {
+        @apply px-4 py-2 font-medium tracking-wide rounded-md shadow-sm;
+    }
 
-@layer components{
-	.button{
-		@apply px-4 py-2 font-medium tracking-wide rounded-md shadow-sm
-	}
+    .button--action {
+        @apply bg-indigo-300 text-indigo-800 hover:bg-indigo-200;
+    }
 
-	.button--action {
-		@apply bg-indigo-300 text-indigo-800 hover:bg-indigo-200
-	}
+    .button--success {
+        @apply bg-green-300 text-green-800 hover:bg-green-200;
+    }
 
-	.button--success {
-		@apply bg-green-300 text-green-800 hover:bg-green-200
-	}
+    .button--warning {
+        @apply bg-red-300 text-red-800 hover:bg-red-200;
+    }
 
-	.button--warning {
-		@apply bg-red-300 text-red-800 hover:bg-red-200
-	}
+    .btn {
+        @apply inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 focus:ring-opacity-50 active:bg-indigo-500 transform transition text-white uppercase tracking-wider font-semibold text-sm sm:text-base;
+    }
 }
